--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -4,14 +4,14 @@ date: "`r Sys.Date()`"
 output: distill::distill_article
 ---
 
-**Mathematics for**, Summer 2022, Columbia University, Master in (SIPA), Prof. 
+**Mathematics for Economists** (Tutor), Summer 2022, Columbia University, Master in Economic Policy Management (SIPA), Prof. Emanuele Gerratana
 
-**Macroeconomics I**, Fall 2020, Columbia University, Master in (SIPA), Prof. Tamrat Gashaw
+**Macroeconomics I** (TA), Fall 2020, Columbia University, Master in (SIPA) Economic Policy Management, Prof. Tamrat Gashaw
 
-**Climate Change Policy**, Spring 2021, Columbia University, Master in (SIPA), Prof. Scott Barrett
+**Climate Change Policy** (TA), Spring 2021, Columbia University, Master in Environmental Science and Policy (SIPA), Prof. Scott Barrett
 
-**Economics and Globalization**, Spring 2019, Sciences-Po, Master in International Economic Policy (PSIA), Prof. Giorgio Barba Navaretti
+**Economics and Globalization** (TA), Spring 2019, Sciences-Po, Master in International Economic Policy (PSIA), Prof. Giorgio Barba Navaretti
 
-**Economics and Politics of Global Trade and Money**, Fall 2018, Sciences-Po, Master in International Economic Policy (PSIA), Prof. Jean Pierre Landau
+**Economics and Politics of Global Trade and Money** (TA), Fall 2018, Sciences-Po, Master in International Economic Policy (PSIA), Prof. Jean Pierre Landau
 
 
