--- a/index.Rmd
+++ b/index.Rmd
@@ -12,13 +12,14 @@ site: distill::distill_website
 ---
 
  
-I am a fifth-year PhD Candidate in Sustainable Development at Columbia University.
+I am a sixth-year PhD Candidate in Sustainable Development at Columbia University, and a Research Fellow at the Columbia Center for Political Economy.
 
-My research stands at the intersection of environmental economics, empirical industrial organization and labor economics. 
+My research stands at the intersection of environmental economics and empirical industrial organization, with a focus on firm dynamics and relations between productivity and sustainability.
 
-I was visiting Mathias Reynaert at the Toulouse School of Economics in fall 2023. 
+Prior to joining Columbia, I earned master degrees in Quantitative Economics from the Paris School of Economics, and in International Relations from Sciences-Po - Paris, as well as bachelor degrees in Political Sciences (Sciences-Po), Law (Paris 1 - Sorbonne), Philosophy (Paris 10 - Nanterre), and studied Pure Mathematics for three years at Paris 6 - UPMC. 
 
-Prior to joining Columbia, I earned master degrees in Quantitative Economics from the Paris School of Economics, and in International Relations from Sciences-Po - Paris, as well as bachelor degrees in Political Sciences (Sciences-Po), Law (Paris 1 - Sorbonne), Philosophy (Paris 10 - Nanterre), and interrupted a bachelor in Mathematics during its last year at Paris 6 - UPMC. 
+I visited Mathias Reynaert at the Toulouse School of Economics in fall 2023. 
 
 I also worked for a public policy consulting cabinet in Brussels, Belgium - specifically on European Union policy for the year 2013-2014, and worked one semester for the French Treasury's office within the French Embassy in Bucharest, Romania. 
 
+I am on the 2024-2025 academic job market.
