--- a/about.Rmd
+++ b/about.Rmd
@@ -6,8 +6,10 @@ output: distill::distill_article
 
 # Work in Progress
 
-**Measuring the Effect of of Agricultural Subsidies on Market Structure, Productivity, and Pollution**
+**An Empirical Model of Agricultural Subsidies with Environmental Externalities** (Job Market Paper)
 
 **Local Crop Species and Pest Diffusion: Evidence from the US Census of Agriculture**, joint with Marguerite Obolensky
+
+**Biases and Economic Consequences of Occupational Definitions: Evidence from O\*NET**, joint with Suresh Naidu and Gina Markov
 
 **Costs of Climate Adaptation: Evidence from French Agriculture**, joint with Jeffrey Shrader
