--- a/about.Rmd
+++ b/about.Rmd
@@ -4,12 +4,14 @@ date: "`r Sys.Date()`"
 output: distill::distill_article
 ---
 
-# Work in Progress
+# Working Papers
 
-**An Empirical Model of Agricultural Subsidies with Environmental Externalities** (Job Market Paper)
+**An Empirical Model of Agricultural Subsidies with Environmental Externalities** (*Job Market Paper*)
 
-**Local Crop Species and Pest Diffusion: Evidence from the US Census of Agriculture**, joint with Marguerite Obolensky
-
-**Biases and Economic Consequences of Occupational Definitions: Evidence from O\*NET**, joint with Suresh Naidu and Gina Markov
+**Local Crop Species and Pest Diffusion: Evidence from the US Census of Agriculture**, joint with Marguerite Obolensky [[link](Crop_Diversity.pdf)]
 
 **Costs of Climate Adaptation: Evidence from French Agriculture**, joint with Jeffrey Shrader
+
+# Work in Progress
+
+**Biases and Economic Consequences of Occupational Definitions: Evidence from O\*NET**, joint with Suresh Naidu and Gina Markov
