--- a/about.Rmd
+++ b/about.Rmd
@@ -6,7 +6,7 @@ output: distill::distill_article
 
 # Working Papers
 
-**An Empirical Model of Agricultural Subsidies with Environmental Externalities** (*Job Market Paper*)
+**An Empirical Model of Agricultural Subsidies with Environmental Externalities** (*Job Market Paper*) [[link](tdupuy_JMP.pdf)]
 
 **Local Crop Species and Pest Diffusion: Evidence from the US Census of Agriculture**, joint with Marguerite Obolensky [[link](Crop_Diversity.pdf)]
 
