--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Tristan Du Puy"
+title: ""
 image: "tristan.png"
 links:
   - label: GitHub
@@ -11,9 +11,8 @@ output:
 site: distill::distill_website
 ---
 
- 
-I am a PhD Candidate in Sustainable Development at Columbia University. In 2026, I will join the Sciences Po Department of Economics as an Assistant Professor, following a one year postdoc at the Columbia University Center for Political Economy.
+I am an economist doing research at the intersection of environmental economics and empirical industrial organization, with a focus on firm dynamics and relations between productivity and sustainability.
 
-My research stands at the intersection of environmental economics and empirical industrial organization, with a focus on firm dynamics and relations between productivity and sustainability.
+I am currently doing a postdoc at the Columbia University Center for Political Economy, and will join the Sciences Po Department of Economics as an Assistant Professor in fall 2026.
 
 I use they/them pronouns.
