--- a/index.Rmd
+++ b/index.Rmd
@@ -15,4 +15,4 @@ I am an economist doing research at the intersection of environmental economics 
 
 I am currently doing a postdoc at the Columbia University Center for Political Economy, and will join the Sciences Po Department of Economics as an Assistant Professor in fall 2026.
 
-I use they/them pronouns.
+I use they/them or she/her pronouns.
