--- a/about.Rmd
+++ b/about.Rmd
@@ -6,7 +6,8 @@ output: distill::distill_article
 
 # Working Papers
 
-**An Empirical Model of Agricultural Subsidies with Environmental Externalities** (*Job Market Paper*) [[link](tdupuy_JMP.pdf)]
+**Unintended Environmental Policies: The Impact of European Agricultural Subsidies on Pollution** (*Job Market Paper*) [[link](tdupuy_JMP.pdf)]
+(previously circulated as "An Empirical Model of Agricultural Subsidies with Environmental Externalities")
 
 **Local Crop Diversity and Pest Diffusion: Evidence
 from the Boll Weevil**, joint with Marguerite Obolensky [[link](Crop_Diversity.pdf)]
@@ -15,4 +16,4 @@ from the Boll Weevil**, joint with Marguerite Obolensky [[link](Crop_Diversity.p
 
 # Work in Progress
 
-**Biases and Economic Consequences of Occupational Definitions: Evidence from O\*NET**, joint with Suresh Naidu and Gina Markov
+**The Worker's Brain Under the Expert's Hat: Occupation Coding, Tacit Knowledge, and Wage-Setting**, joint with Suresh Naidu and Gina Markov
